--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 annotated-types==0.6.0
-beanie==1.25.0
+beanie==1.23.6
 certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
@@ -8,8 +8,9 @@ dnspython==2.6.1
 idna==3.6
 lazy-model==0.2.0
 motor==3.3.2
-pydantic==2.6.4
-pydantic_core==2.16.3
+pydantic==1.10.13
+pydantic_core==2.14.5
+pydentic==0.0.1.dev3
 pymongo==4.6.2
 pyTelegramBotAPI==4.16.1
 requests==2.31.0
